AX: Input time element field labels and values are not spoken by VoiceOver. https://bugs.webkit.org/show_bug.cgi?id=269028 <rdar://problem/122590568>

Reviewed by Chris Fleizach.

VoiceOver does not speak the value of <input type="time">, and does not announce the value of individual fields within the control when neither a field is selected nor its value changed. This patch fixes these problems for numeric fields (derived from DateTimeNumericFieldElement) by providing appropriate labels for those fields and a role of SpinButton. In addition, AccessibilityRenderObject::stringValue now returns the correct value for all variants of date and time elements.

This patch creates a directory for date time tests under LayoutTests/accessibility and moves some exisitng tests to it.

* LayoutTests/accessibility/datetime/input-date-field-labels-and-value-changes-expected.txt: Renamed from LayoutTests/accessibility/date-input-aria-label-and-value-expected.txt.
* LayoutTests/accessibility/datetime/input-date-field-labels-and-value-changes.html: Renamed from LayoutTests/accessibility/date-input-aria-label-and-value.html.
* LayoutTests/accessibility/datetime/input-time-field-labels-and-value-changes-expected.txt: Added.
* LayoutTests/accessibility/datetime/input-time-field-labels-and-value-changes.html: Added.
* LayoutTests/accessibility/datetime/input-time-label-value-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/input-time-label-value-expected.txt.
* LayoutTests/accessibility/datetime/input-time-label-value.html: Renamed from LayoutTests/accessibility/input-time-label-value.html.
* LayoutTests/accessibility/input-time-label-value-expected.txt: Removed.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/accessibility/input-time-label-value-expected.txt: Removed.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-monterey/accessibility/input-time-label-value-expected.txt: Removed.
* LayoutTests/platform/mac-monterey/accessibility/datetime/input-time-label-value-expected.txt: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/wpe/accessibility/input-time-label-value-expected.txt: Removed.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::stringValue const):
* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebCore/html/shadow/DateTimeFieldElements.cpp:
(WebCore::DateTimeHourFieldElement::create):
(WebCore::DateTimeMeridiemFieldElement::create):
(WebCore::DateTimeMillisecondFieldElement::create):
(WebCore::DateTimeMinuteFieldElement::create):
(WebCore::DateTimeSecondFieldElement::create):
* Source/WebCore/platform/LocalizedStrings.cpp:
(WebCore::AXTimeFieldHourText):
(WebCore::AXTimeFieldMinuteText):
(WebCore::AXTimeFieldSecondText):
(WebCore::AXTimeFieldMillisecondText):
(WebCore::AXTimeFieldMeridiemText):
* Source/WebCore/platform/LocalizedStrings.h:

Canonical link: https://commits.webkit.org/275301@main