Source/WebCore/platform/LocalizedStrings.cpp
@@ -738,6 +738,31 @@ String AXDateFieldYearText()
     return WEB_UI_STRING("year", "accessibility label for a date field year input.");
 }
 
+String AXTimeFieldHourText()
+{
+    return WEB_UI_STRING("hour", "accessibility label for hour fields.");
+}
+
+String AXTimeFieldMinuteText()
+{
+    return WEB_UI_STRING("minutes", "accessibility label for minutes fields.");
+}
+
+String AXTimeFieldSecondText()
+{
+    return WEB_UI_STRING("seconds", "accessibility label for seconds fields.");
+}
+
+String AXTimeFieldMillisecondText()
+{
+    return WEB_UI_STRING("milliseconds", "accessibility label for milliseconds fields.");
+}
+
+String AXTimeFieldMeridiemText()
+{
+    return WEB_UI_STRING("meridiem", "accessibility label for meridiem fields.");
+}
+
 String AXDateTimeFieldText()
 {
     return WEB_UI_STRING("date and time field", "accessibility role description for a date and time field.");
